# containerized-strands-agents

./: AGENTS.md  ARCHITECTURE.md  CONFIGURATION.md  DESIGN.md  DYNAMIC_PROMPT_LIST_FEATURE.md  FIX_SUMMARY.md  GETTING_STARTED.md  MANIFEST.in  MERGE_VERIFICATION.md  Makefile  PHASE1_IMPLEMENTATION.md  PHASE2_IMPLEMENTATION.md  PR_REVIEWS_SUMMARY.md  RACE_CONDITION_FIX.md  README.md  REFACTOR_SUMMARY.md  STOP_AGENT_FEATURE.md  SYSTEM_PROMPT.md  SYSTEM_PROMPT_FILE_FEATURE.md  design.md  pyproject.toml  run_web_ui.py  strands_sdk_feature_comparison.md  test_concurrent_requests.py  test_queue_unit.py
.github/workflows/: ci.yml  publish.yml
docker/: Dockerfile  agent_runner.py  github_tools.py  requirements.txt  use_github.py
docs/: index.html
scripts/: build_docker.sh  run_server.sh
skills/task-adversarial-tester/: SKILL.md
skills/task-implementer/: SKILL.md
skills/task-refiner/: SKILL.md
skills/task-release-notes/: SKILL.md
skills/task-reviewer/: SKILL.md
src/containerized_strands_agents/: __init__.py  agent.py  agent_manager.py  cli.py  config.py  server.py  task_handlers.py  task_store.py
tests/: test_agent_manager.py  test_custom_system_prompt.py  test_custom_system_prompt_integration.py  test_e2e.py  test_get_messages_container_recovery.py  test_integration.py  test_mcp_config.py  test_skills_and_perplexity.py  test_system_prompt_file.py  test_task_handlers.py  test_task_store.py
ui/: api.py  index.html  index.html.bak  run_ui.py
