[project]
name = "containerized-strands-agents"
version = "0.1.0"
description = "MCP server that hosts isolated Strands AI agents in Docker containers"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
keywords = ["mcp", "strands", "agents", "docker", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastmcp>=2.0.0",
    "docker>=7.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
webui = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
]

[project.scripts]
containerized-strands-agents = "containerized_strands_agents.server:main"
containerized-strands-agents-webui = "ui.run_ui:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/containerized_strands_agents", "ui"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
